@@ -98,6 +98,9 @@
 	  has changed
 	- compat.h typedef cQueueIterator removed, as iterator semantic was changed in a non-compatible way anyway
 
+	cArray:
+	- items() became size()
+
 	Gross renaming: cObject became cOwnedObject, cPolymorphic became cObject;
 	  - cNamedObject introduced in between.
 	  - cArray, cQueue still handle cObject (old cPolymorphic), i.e. they can work
